gitops_gitlab/apps/vectorizer/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-search
  namespace: iplus
spec:
  ingressClassName: nginx
  rules:
  - host: apisearch-test.hasti.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-search
            port:
              number: 3001
